# agent-runtime-oai-agents

./: .env.example  .gitignore  README.md  _gen_test.py  alembic.ini  main.py  pyproject.toml
.hermes/plans/: 2026-06-07_120000-add-fastapi-api.md
alembic/: env.py
alembic/versions/: 014d52c9da5e_add_system_prompts_table_and_messages_.py  26f682471bc7_add_tool_name_column_to_messages.py  a1b2c3d4e5f6_create_conversations_and_messages_tables.py  a76f7ff8cc06_rename_conversation_to_session.py  afb81b1310b1_create_conversations_and_messages_tables.py  b6a8d3f92c4d_add_model_metadata_to_messages.py  c91d4e7a6b2a_add_runtime_models_table.py  faa04ba69d75_add_tool_call_columns_to_messages.py  fd08fd099b38_add_tools_json_to_sessions.py
docs/plans/: 2026-06-06-agent-runtime.md
src/agent_runtime/: __init__.py  cli.py  config.py  ids.py  tracing.py
src/agent_runtime/agents/: hooks.py  model_provider.py  runtime.py
src/agent_runtime/api/: app.py  auth.py  deps.py  schemas.py
src/agent_runtime/api/routers/: models.py  prompts.py  sessions.py  tools.py
src/agent_runtime/db/: connection.py  conversation_repo.py  models.py  prompt_repo.py  runtime_model_repo.py  session_repo.py
src/agent_runtime/tools/: _tinyfish_common.py  country.py  currency.py  visualization.py  weather.py  web_agent.py  web_browser.py  web_fetch.py  web_search.py
tests/: conftest.py  test_agent.py  test_conversation_repo.py  test_db_connection.py  test_model_provider.py  test_prompt_repo.py  test_runtime_model_repo.py  test_session_repo.py
tests/api/: test_endpoints.py
tests/integration/: conftest.py  test_endpoints.py  test_model_provider.py  test_prompt_repo.py  test_runtime_model_repo.py  test_session_repo.py  test_smoke.py
tests/tools/: test_currency.py  test_tinyfish_common.py  test_visualization.py  test_weather.py  test_web_browser.py  test_web_search.py
tests/unit/: conftest.py  test_agent.py  test_auth.py  test_cli.py  test_config.py  test_hooks.py  test_ids.py  test_tools.py  test_tracing.py
tests/unit/tools/: test_country.py  test_web_agent.py  test_web_fetch.py
